--- a/elementary/pom.xml
+++ b/elementary/pom.xml
@@ -10,6 +10,8 @@
 
     <properties>
         <kotlin.version>1.7.21</kotlin.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
